<resources>
    <string name="app_name">LoginWithAnimation</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau berbagi ilmu Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding story aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding Story!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk sharing?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="password_too_short">Password harus berisi minimal 8 karakter!</string>
    <string name="name_required">Name field must be filled!</string>
    <string name="preview_photo">Preview photo</string>
    <string name="use_camera">Camera</string>
    <string name="use_gallery">Gallery</string>
    <string name="enter_description">Enter a description</string>
    <string name="add_story">Add Story</string>
    <string name="upload">Upload</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>